--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,7 @@ a, button, img, input, span {
 }
 
 .header-area .header-top {
-  background-color: #F03C02;
+  background-color: #282525;
   color: white;
   font-size: 13px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -172,5 +172,36 @@ main .banners a img {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
+}
+
+main .products .products-container .product {
+  border: 1px solid #ededed;
+  width: 33%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 3px;
+}
+
+main .products .products-container .product .image-product {
+  border-bottom: 1px solid #ededed;
+  display: block;
+}
+
+main .products .products-container .product .texto-categoria {
+  display: block;
+  text-decoration: none;
+}
+
+main .products .products-container .product .titulo-product {
+  display: block;
+  text-decoration: none;
+}
+
+main .products .products-container .product .precios .precio-decuento {
+  color: red;
+}
+
+main .products .products-container .product .precios .precio {
+  color: #F03C02;
 }
 /*# sourceMappingURL=style.css.map */
